--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>注册账号 - ThinkCraft</title>
+    <link rel="icon" href="/favicon.ico">
     <style>
         * {
             margin: 0;
