阶段1：提取工具函数到独立文件
- 创建 utils/icons.js：图标系统函数
- 创建 utils/dom.js：DOM操作函数
- 创建 utils/format.js：格式化函数
- 从 app-boot.js 中删除已提取的函数（减少108行）
- 在 index.html 中引入工具函数文件

文件变化：7172行 → 7064行（-108行），322KB → 316KB（-6KB）

--- a/index.html
+++ b/index.html
@@ -1021,6 +1021,11 @@
     <script src="frontend/js/core/api-client.js"></script>
     <script src="frontend/js/core/storage-manager.js"></script>
 
+    <!-- 工具函数 -->
+    <script src="frontend/js/utils/format.js"></script>
+    <script src="frontend/js/utils/dom.js"></script>
+    <script src="frontend/js/utils/icons.js"></script>
+
     <!-- 组件模块 -->
     <script src="frontend/js/components/modal-manager.js"></script>
     <script src="frontend/js/components/agent-progress.js"></script>
@@ -1033,7 +1038,7 @@
     <script src="frontend/js/modules/agent-collaboration.js"></script>
     <script src="frontend/js/modules/business-plan-generator.js"></script>
 
-    <script src="frontend/js/app-boot.js?v=20260128-3"></script>
+    <script src="frontend/js/app-boot.js?v=20260130-1"></script>
     <script src="frontend/js/boot/init.js"></script>
 </body>
 </html>
