阶段2：拆分聊天模块
- 创建 modules/chat/typing-effect.js：打字机效果（167行）
- 创建 modules/chat/message-handler.js：消息处理（390行）
- 创建 modules/chat/chat-list.js：对话列表管理（330行）
- 在 index.html 中引入聊天模块文件
- 在 app-boot.js 中添加全局函数声明

新增代码：887行
文件结构更清晰，聊天功能模块化

--- a/index.html
+++ b/index.html
@@ -1031,6 +1031,11 @@
     <script src="frontend/js/components/agent-progress.js"></script>
     <script src="frontend/js/components/markdown-renderer.js"></script>
 
+    <!-- 聊天模块 -->
+    <script src="frontend/js/modules/chat/typing-effect.js"></script>
+    <script src="frontend/js/modules/chat/message-handler.js"></script>
+    <script src="frontend/js/modules/chat/chat-list.js"></script>
+
     <!-- 功能模块 -->
     <script src="frontend/js/modules/project-manager.js"></script>
     <script src="frontend/js/modules/workflow-executor.js"></script>
@@ -1038,7 +1043,7 @@
     <script src="frontend/js/modules/agent-collaboration.js"></script>
     <script src="frontend/js/modules/business-plan-generator.js"></script>
 
-    <script src="frontend/js/app-boot.js?v=20260130-1"></script>
+    <script src="frontend/js/app-boot.js?v=20260130-2"></script>
     <script src="frontend/js/boot/init.js"></script>
 </body>
 </html>
