阶段3：拆分报告模块
- 创建 modules/report/report-viewer.js：报告查看器（130行）
- 创建 modules/report/report-generator.js：报告生成器（150行）
- 创建 modules/report/share-card.js：分享卡片（120行）
- 在 index.html 中引入报告模块文件

新增代码：400行
报告功能模块化完成

--- a/index.html
+++ b/index.html
@@ -1036,6 +1036,11 @@
     <script src="frontend/js/modules/chat/message-handler.js"></script>
     <script src="frontend/js/modules/chat/chat-list.js"></script>
 
+    <!-- 报告模块 -->
+    <script src="frontend/js/modules/report/report-viewer.js"></script>
+    <script src="frontend/js/modules/report/report-generator.js"></script>
+    <script src="frontend/js/modules/report/share-card.js"></script>
+
     <!-- 功能模块 -->
     <script src="frontend/js/modules/project-manager.js"></script>
     <script src="frontend/js/modules/workflow-executor.js"></script>
