阶段4-5：创建剩余功能模块
- 创建 modules/knowledge-base.js：知识库管理（90行）
- 创建 modules/input-handler.js：输入处理（180行）
- 创建 modules/ui-controller.js：UI控制器（180行）
- 在 index.html 中引入新模块

新增代码：450行
所有核心功能模块化完成

--- a/index.html
+++ b/index.html
@@ -1041,6 +1041,11 @@
     <script src="frontend/js/modules/report/report-generator.js"></script>
     <script src="frontend/js/modules/report/share-card.js"></script>
 
+    <!-- 其他功能模块 -->
+    <script src="frontend/js/modules/knowledge-base.js"></script>
+    <script src="frontend/js/modules/input-handler.js"></script>
+    <script src="frontend/js/modules/ui-controller.js"></script>
+
     <!-- 功能模块 -->
     <script src="frontend/js/modules/project-manager.js"></script>
     <script src="frontend/js/modules/workflow-executor.js"></script>
