--- a/test-refactor.html
+++ b/test-refactor.html
@@ -4,6 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>重构验证测试</title>
+
+    <!-- 加载核心服务 -->
+    <script src="frontend/js/core/state-manager.js"></script>
+    <script src="frontend/js/core/api-client.js"></script>
+    <script src="frontend/js/core/storage-manager.js"></script>
+
+    <!-- 加载工具函数 -->
+    <script src="frontend/js/utils/format.js"></script>
+    <script src="frontend/js/utils/dom.js"></script>
+    <script src="frontend/js/utils/icons.js"></script>
+
+    <!-- 加载组件模块 -->
+    <script src="frontend/js/components/modal-manager.js"></script>
+    <script src="frontend/js/components/agent-progress.js"></script>
+    <script src="frontend/js/components/markdown-renderer.js"></script>
+
+    <!-- 加载聊天模块 -->
+    <script src="frontend/js/modules/chat/typing-effect.js"></script>
+    <script src="frontend/js/modules/chat/message-handler.js"></script>
+    <script src="frontend/js/modules/chat/chat-list.js"></script>
+
+    <!-- 加载报告模块 -->
+    <script src="frontend/js/modules/report/report-viewer.js"></script>
+    <script src="frontend/js/modules/report/report-generator.js"></script>
+    <script src="frontend/js/modules/report/share-card.js"></script>
+
+    <!-- 加载其他功能模块 -->
+    <script src="frontend/js/modules/knowledge-base.js"></script>
+    <script src="frontend/js/modules/input-handler.js"></script>
+    <script src="frontend/js/modules/ui-controller.js"></script>
+
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
@@ -309,6 +340,12 @@
         window.addEventListener('load', () => {
             log('📄 测试页面已加载', 'info');
             log('💡 点击"运行所有测试"按钮开始测试', 'info');
+
+            // 等待所有脚本加载完成后自动运行测试
+            setTimeout(() => {
+                log('⏰ 自动运行测试...', 'info');
+                runAllTests();
+            }, 1000);
         });
     </script>
 </body>
