Implement chat drafts and dev login code modal

--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                     <div class="settings-section-title">功能</div>
                     <div class="settings-item">
                         <div class="settings-item-info">
-                            <div class="settings-item-title">数字员工团队</div>
+                            <div class="settings-item-title">数字员工团队 <span class="beta-badge">beta</span></div>
                             <div class="settings-item-desc">启用AI团队协作功能，可在侧边栏切换查看</div>
                         </div>
                         <label class="toggle-switch">
@@ -904,7 +904,7 @@
                     <div class="settings-section-title">功能</div>
                     <div class="settings-item">
                         <div class="settings-item-info">
-                            <div class="settings-item-title">数字员工团队</div>
+                            <div class="settings-item-title">数字员工团队 <span class="beta-badge">beta</span></div>
                             <div class="settings-item-desc">启用AI团队协作功能，可在侧边栏切换查看</div>
                         </div>
                         <label class="toggle-switch">
