Fix workflow execution and deliverable selection UI

--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
         <div class="onboarding-backdrop"></div>
         <div class="onboarding-highlight" id="onboardingHighlight"></div>
         <div class="onboarding-tooltip" id="onboardingTooltip">
+            <div class="onboarding-chip" id="onboardingChip"></div>
             <div class="onboarding-step" id="onboardingStep">1 / 1</div>
             <div class="onboarding-title" id="onboardingTitle"></div>
             <div class="onboarding-desc" id="onboardingDesc"></div>
