Integrate deep research prompts and reporting

--- a/index.html
+++ b/index.html
@@ -613,6 +613,27 @@
             <div class="modal-body">
                 <p class="tip">核心章节将自动生成，您可以选择需要深入分析的其他章节</p>
 
+                <!-- 深度研究开关 -->
+                <div class="deep-research-toggle" style="margin: 16px 0; padding: 12px; background: var(--bg-secondary); border-radius: 8px;">
+                    <label style="display: flex; align-items: center; cursor: pointer;">
+                        <input type="checkbox" id="deepResearchSwitch" style="margin-right: 8px;">
+                        <div>
+                            <strong>启用深度研究模式（整篇文档）</strong>
+                            <p style="margin: 4px 0 0 0; font-size: 12px; color: var(--text-secondary);">
+                                使用DeepResearch对所有章节进行多轮迭代和网络搜索，生成更专业的报告（耗时约2-3分钟/章节）
+                            </p>
+                        </div>
+                    </label>
+                    <div style="margin-top: 10px; display: flex; align-items: center; gap: 8px;">
+                        <label for="deepResearchDepth" style="font-size: 12px; color: var(--text-secondary);">研究深度</label>
+                        <select id="deepResearchDepth" style="padding: 6px 8px; border-radius: 6px; border: 1px solid var(--border); background: var(--bg-primary); color: var(--text-primary);">
+                            <option value="shallow">浅层（快）</option>
+                            <option value="medium" selected>中等（推荐）</option>
+                            <option value="deep">深度（慢）</option>
+                        </select>
+                    </div>
+                </div>
+
                 <div id="chapterList">
                     <!-- 章节列表将通过JavaScript动态生成 -->
                 </div>
@@ -677,11 +698,18 @@
             </div>
 
             <div class="modal-footer">
-                <div style="display: flex; gap: 12px; justify-content: flex-end;">
+                <div style="display: flex; gap: 16px; align-items: center; justify-content: space-between; width: 100%;">
+                    <label style="display: inline-flex; align-items: center; gap: 8px; color: var(--text-secondary); font-size: 13px;">
+                        <input type="checkbox" id="reportSourcesToggle" onchange="toggleReportSources(this.checked)">
+                        显示引用来源
+                    </label>
+                    <div style="display: flex; gap: 12px; justify-content: flex-end;">
                     <button class="btn-secondary" onclick="adjustBusinessReportChapters()">调整章节</button>
                     <button class="btn-secondary" onclick="regenerateBusinessReport()">🔄 重新生成</button>
+                    <button class="btn-secondary" onclick="downloadReportSources()" style="display: none;">下载引用</button>
                     <button class="btn-secondary" onclick="exportBusinessReport()">导出PDF</button>
                     <button class="btn-primary" id="businessReportShareBtn" onclick="shareBusinessReport()">分享报告</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1133,7 +1161,7 @@
     <script defer src="/frontend/js/modules/agent-collaboration.js?v=20260131-4"></script>
 
     <!-- 商业计划书（用户点击"生成商业计划书"时才需要） -->
-    <script defer src="/frontend/js/modules/business-plan-generator.js?v=20260131-fix2"></script>
+    <script defer src="/frontend/js/modules/business-plan-generator.js?v=20260208-debug3"></script>
 
     <!-- 工作流执行器（按需加载） -->
     <script defer src="/frontend/js/modules/workflow-executor.js"></script>
